--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@
 /rails/!/log/.keep
 /rails/tmp
 
-/react/node_modules/*
+/react/node_modules/
+/react/client/node_modules/
 /react/client/build/.bundle
